--- a/Client/Website/src/app/pages/guest/profile/booking-details/booking-details.component.html
+++ b/Client/Website/src/app/pages/guest/profile/booking-details/booking-details.component.html
@@ -8,7 +8,7 @@
         <hr style="width: 90%; margin-left: 32px; margin-right: 32px;">
 
         <h4 class="properties-title">Date:</h4>  
-        <p class="properties-info">Tue 14 February - Wed 15 February</p>
+        <p class="properties-info">{{check_in}}-{{end_date}}</p>
         <h4 class="properties-title">Occupancy:</h4>
         <p class="properties-info"> 2 adults + 1 child or 3 adults</p>
         <h4 class="properties-total">Total:</h4>
