Linked the Cart🍴
1. Design, Implement and Link Restaurant Page
2. 10
3. Fully linked the cart with the new APIs

--- a/Client/Website/src/app/components/food/food-list-popup/food-list-popup.component.html
+++ b/Client/Website/src/app/components/food/food-list-popup/food-list-popup.component.html
@@ -46,7 +46,7 @@
                                 </p>
                             </td>
                             <td style="width: 50%;">
-                                <p (click)="addToCart()" class="cancel-btn">
+                                <p (click)="addToCart()" class="add-btn">
                                     Add to Cart
                                 </p>
                             </td>
