--- a/Client/Website/src/app/pages/guest/restaurant/landing/landing-restaurant.component.scss
+++ b/Client/Website/src/app/pages/guest/restaurant/landing/landing-restaurant.component.scss
@@ -80,14 +80,16 @@
     margin: 10px;
     padding: 20px;
     width: 250px;
+    border-color: transparent;
     margin: 20px;
     font-size: 20px;
     text-transform: uppercase;
 }
 
 .menu-button:hover {
-    
-    background-color: #222222;
+
+    color: #14274A;
+    background-color: lightgray;
 
 }
 
@@ -100,6 +102,13 @@
     margin: 20px;
     font-size: 14px;
     text-transform: uppercase;
+}
+
+.feedback-button:hover {
+
+    background-color: #14274A33;
+    color: white;
+
 }
 
 .chefs-button {
