--- a/Client/Website/src/app/pages/guest/home/home.component.html
+++ b/Client/Website/src/app/pages/guest/home/home.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="nav">
+<div class="nav">
     <app-nav-bar [transparent]="true"></app-nav-bar>
     <div class="nav_title">
         <p class="nav_title_1">Welcome To</p>
@@ -7,7 +7,7 @@
         <p class="nav_title_4">Book your stay and enjoy Luxury<br>
             redefined at the most affordable rates</p>
     </div>
-</div> -->
+</div>
 
 <div>
     <div>
