Implemented the Popup Functionality🛖
1. Design, Implement Home Page and Link News Feed
2. 10
3. Implemented the news pop up functionality.

--- a/Client/Website/src/app/components/news/news-list-item/news-list-item.component.html
+++ b/Client/Website/src/app/components/news/news-list-item/news-list-item.component.html
@@ -6,7 +6,7 @@
             <p class="body_table_header">{{news?.value?.title}}</p>
             <p class="body_table_content">{{news?.value?.body}}</p>
             <div>
-                <button class="button">
+                <button class="button" (click)="openPopup()">
                     Learn More
                 </button>
                 <p class="likes">{{news?.value?.likes}} Likes</p>
