--- a/Client/Website/src/app/pages/guest/profile/booking-details/booking-details.component.html
+++ b/Client/Website/src/app/pages/guest/profile/booking-details/booking-details.component.html
@@ -1,13 +1,27 @@
-<h2 class="details-title">Imperial King Room</h2>
 <div class="bookings-container">
-    <img class="details-pic" src="../../../../../assets/room.png">
+    <table>
+
+        <tr>
+
+            <td>
+
+                <h2 class="details-title">Imperial King Room</h2>
+            </td>
+        </tr>
+        <tr>
+            <td>
+
+                <img class="details-pic" src="../../../../../assets/room.png">
+            </td>
+        </tr>
+    </table>
 
     <div class="booking-info">
 
         <h2 class="booking-title">Booking Details</h2>
         <hr style="width: 90%; margin-left: 32px; margin-right: 32px;">
 
-        <h4 class="properties-title">Date:</h4>  
+        <h4 class="properties-title">Date:</h4>
         <p class="properties-info">{{check_in}}-{{end_date}}</p>
         <h4 class="properties-title">Occupancy:</h4>
         <p class="properties-info"> 2 adults + 1 child or 3 adults</p>
