--- a/Client/Website/src/app/pages/guest/profile/profile.component.html
+++ b/Client/Website/src/app/pages/guest/profile/profile.component.html
@@ -31,29 +31,32 @@
             </div>
             <div style="position: relative;padding: 32px;">
                 <div class="wrap">
-                    <img class="order-img" src="../../../../assets/burger.png">
+                    <img height="60vh" width="60vw" class="order-img" src="../../../../assets/burger.png">
                 </div>
                 <h4 class="order-title">Wed 3 February</h4>
             </div>
         </div>
     </div>
 
-    <div>
+    <div style="width: 98%; border: 1px solid red">
         <h1 class="page-titles">My Bookings</h1>
         <hr class="divider">
-        <!-- <app-carousel [browsePopup]="browseBookingHistory" #carousel>
+        <app-carousel [browsePopup]="browseBookingHistory" #carousel>
             <ng-container *ngFor="let booking of bookings | keyvalue; let i = index">
                 <ng-container *carouselItem>
-                    <app-booking-details style="width: 100%; display: flex; position: relative;" 
-                    [@fadeOut] [check_in]="booking.value.check_in" [end_date]="booking.value.end_date" [exhausted]="booking.value.exhausted" ></app-booking-details>
+
+                    <app-booking-details
+                        style="width: 100%; display: flex; position: relative;left: 50%; transform: translateX(-50%); "
+                        [@fadeOut] [check_in]="booking.value.check_in" [end_date]="booking.value.end_date"
+                        [exhausted]="booking.value.exhausted"></app-booking-details>
                 </ng-container>
             </ng-container>
-        </app-carousel> -->
-    <ng-container *ngFor="let booking of bookings | keyvalue; let i = index">
+        </app-carousel>
+        <!-- <ng-container *ngFor="let booking of bookings | keyvalue; let i = index">
         <app-booking-details style="width: 100%; display: flex; position: relative;" 
         [check_in]="booking.value.check_in" [end_date]="booking.value.end_date" [exhausted]="booking.value.exhausted"></app-booking-details>
-    </ng-container>
-    
+    </ng-container> -->
+
     </div>
     <div>
         <h1 class="page-titles">My Activities</h1>
