--- a/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.html
+++ b/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.html
@@ -6,7 +6,7 @@
         </td>
     </tr>
     <tr>
-        <td style="padding: 16px; height:80vh;">
+        <td style="padding: 16px; width: 60%; height:80vh;">
 
             <img style="vertical-align: middle; object-fit: cover;" width="100%" height="100%"
                 src="../../../assets/activity-1.jpg">
