--- a/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.scss
+++ b/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.scss
@@ -1,7 +1,7 @@
 .main {
     // padding: 16px;
     border-radius: 20px;
-    width: fit-content;
+    width: 100%;
     margin: 16px;
     padding: 16px;
     // height: 50%;
