--- a/Client/Application/src/global.scss
+++ b/Client/Application/src/global.scss
@@ -24,3 +24,5 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Kulim+Park:wght@200;400;500&display=swap');
