--- a/Client/Application/src/app/pages/authentication/login/login.component.html
+++ b/Client/Application/src/app/pages/authentication/login/login.component.html
@@ -2,9 +2,12 @@
 <ion-img class="header-2 center" src="../../../../assets/login/header-1.png"></ion-img>
 <div class="labels">
     <ion-text class="title">Login Now</ion-text>
-    <ion-input [(ngModel)]="email" label="Email" class="input"></ion-input>
-    <ion-input [(ngModel)]="password" label="Password" class="input"></ion-input>
+    <ion-input [(ngModel)]="email" placeholder="Email"
+        class="input"></ion-input>
+    <ion-input [(ngModel)]="password" placeholder="Password"
+        class="input"></ion-input>
     <ion-text class="password">Forgot Password?</ion-text>
     <ion-button (click)="login()" class="login">Login</ion-button>
-    <ion-text class="register">Don't have an Account <ion-text class="register-button">Sign-up</ion-text></ion-text>
+    <ion-text class="register">Don't have an Account <a [routerLink]="['../register']"
+            class="register-button">Sign-up</a></ion-text>
 </div>
