--- a/Client/Application/src/app/pages/authentication/register/register.component.html
+++ b/Client/Application/src/app/pages/authentication/register/register.component.html
@@ -1,1 +1,28 @@
-<p>login works</p>
+<ion-img style="position: fixed;" src="../../../../assets/register/header-1.png"></ion-img>
+<div class="labels">
+
+    <ng-container *ngIf="!final_page">
+
+        <ion-text class="title">Sign Up</ion-text>
+        <ion-input [(ngModel)]="email" placeholder="Name" class="input"></ion-input>
+        <ion-input [(ngModel)]="email" placeholder="Last Name" class="input"></ion-input>
+        <ion-input [(ngModel)]="email" placeholder="Email" class="input"></ion-input>
+        <ion-input [(ngModel)]="email" placeholder="Phone Number" class="input"></ion-input>
+        <ion-button (click)="final_page = true" class="register">Next</ion-button>
+        <ion-text class="login">Already have an Account? <a [routerLink]="['../login']"
+                class="login-button">Sign-in</a></ion-text>
+
+    </ng-container>
+    <ng-container *ngIf="final_page">
+
+        <ion-text class="title">Sign Up</ion-text>
+        <ion-input [(ngModel)]="email" placeholder="Password" class="input"></ion-input>
+        <ion-input [(ngModel)]="email" placeholder="Confirm Password" class="input"></ion-input>
+        <ion-input [(ngModel)]="email" placeholder="Date of Birth" class="input"></ion-input>
+        <ion-input [(ngModel)]="email" placeholder="Gender" class="input"></ion-input>
+        <ion-button (click)="final_page = true" class="register" (click)="register()">Sign up</ion-button>
+        <ion-text class="login">Already have an Account? <a [routerLink]="['../login']"
+                class="login-button">Sign-in</a></ion-text>
+
+    </ng-container>
+</div>
