Made some Minor tweaks🛖
1. Design, Implement Home Page and Link News Feed
2. 10
3. Fixed a few design choices.

--- a/Client/Website/src/app/components/general/nav-bar/nav-bar.component.html
+++ b/Client/Website/src/app/components/general/nav-bar/nav-bar.component.html
@@ -30,7 +30,7 @@
         <tr>
 
             <td>
-                <a [routerLink]="['/admin/user-database']" class="title-3">{{"home" | translate}}</a>
+                <a [routerLink]="['/home']" class="title-3">{{"home" | translate}}</a>
             </td>
             <td>
                 <a [routerLink]="['/services']" class="title-3">{{"services" | translate}}</a>
