--- a/Client/Website/src/app/pages/guest/home/home.component.scss
+++ b/Client/Website/src/app/pages/guest/home/home.component.scss
@@ -46,7 +46,7 @@ $image-path: '../../../../assets/';
 
 .body_title {
     color: $color-primary;
-    font-family: $font-primary;
+    font-family: 'Montserrat';
     font-size: 30px;
     font-weight: 500;
     margin-bottom: -6px;
