--- a/Client/Website/src/app/pages/guest/profile/profile.component.html
+++ b/Client/Website/src/app/pages/guest/profile/profile.component.html
@@ -17,23 +17,11 @@
         <h1 class="page-titles">My Orders</h1>
         <hr class="divider">
         <div class="orders-container">
-            <div style="position: relative;padding: 32px;">
+            <div *ngFor="let order of orders |keyvalue" style="position: relative;padding: 32px;">
                 <div class="wrap">
                     <img class="order-img" src="../../../../assets/burger.png">
                 </div>
-                <h4 class="order-title">Wed 3 February</h4>
-            </div>
-            <div style="position: relative;padding: 32px;">
-                <div class="wrap">
-                    <img class="order-img" src="../../../../assets/burger.png">
-                </div>
-                <h4 class="order-title">Wed 3 February</h4>
-            </div>
-            <div style="position: relative;padding: 32px;">
-                <div class="wrap">
-                    <img height="60vh" width="60vw" class="order-img" src="../../../../assets/burger.png">
-                </div>
-                <h4 class="order-title">Wed 3 February</h4>
+                <h4 class="order-title">{{order.value.date}}</h4>
             </div>
         </div>
     </div>
@@ -47,15 +35,14 @@
 
                     <app-booking-details
                         style="width: 100%; display: flex; position: relative;left: 50%; transform: translateX(-50%); "
-                        [@fadeOut] [check_in]="booking.value.check_in" [end_date]="booking.value.end_date"
+                        [@fadeOut] [room]="rooms.get(booking.value.room_id)!"
+                        [room_type]="room_types.get(rooms.get(booking.value.room_id)!.type)!"
+                        [check_in]="booking.value.check_in" [end_date]="booking.value.end_date"
                         [exhausted]="booking.value.exhausted"></app-booking-details>
                 </ng-container>
             </ng-container>
         </app-carousel>
-        <!-- <ng-container *ngFor="let booking of bookings | keyvalue; let i = index">
-        <app-booking-details style="width: 100%; display: flex; position: relative;" 
-        [check_in]="booking.value.check_in" [end_date]="booking.value.end_date" [exhausted]="booking.value.exhausted"></app-booking-details>
-    </ng-container> -->
+
 
     </div>
     <div>
