--- a/Client/Website/src/app/pages/guest/profile/profile.component.html
+++ b/Client/Website/src/app/pages/guest/profile/profile.component.html
@@ -26,7 +26,7 @@
         </div>
     </div>
 
-    <div style="width: 98%; border: 1px solid red">
+    <div style="width: 98%;">
         <h1 class="page-titles">My Bookings</h1>
         <hr class="divider">
         <app-carousel [browsePopup]="browseBookingHistory" #carousel>
