Fixed a lot of bugs🔔
1. Implement and Link Admin Notifications
2. 10
3. Conducted a system-wide check using the newly defined triggers system.

--- a/Client/Website/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/Client/Website/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -5,7 +5,7 @@
         <button [routerLink]="['/admin/user-database']" class="check-btn">{{"User Database" | translate}}</button>
     </div>
     <div class="col-md-3">
-        <button [routerLink]="['/admin/rooms-database']" class="check-btn">{{"Room Database" | translate}}</button>
+        <button [routerLink]="['/admin/room-database']" class="check-btn">{{"Room Database" | translate}}</button>
     </div>
     <div class="col-md-3">
         <button [routerLink]="['/admin/booking-database']" class="check-btn">{{"Booking Database" | translate}}</button>
@@ -36,7 +36,7 @@
         <button [routerLink]="['/admin/registration-database']" class="check-btn">{{"Registration Database" | translate}}</button>
     </div>
     <div class="col-md-3">
-        <button [routerLink]="['/admin/services-database']" class="check-btn">{{"Services Database" | translate}}</button>
+        <button [routerLink]="['/admin/service-database']" class="check-btn">{{"Services Database" | translate}}</button>
     </div>
     <div class="col-md-3">
         <button [routerLink]="['/admin/stock-database']" class="check-btn">{{"Stock Database" | translate}}</button>
