--- a/Client/Website/src/app/pages/guest/profile/profile.component.html
+++ b/Client/Website/src/app/pages/guest/profile/profile.component.html
@@ -8,7 +8,7 @@
 
 
     <div>
-        <h1 class="user">Charbel Gerges</h1>
+        <h1 class="user">{{first_name}} {{last_name}}</h1>
         <hr class="main-divider">
         <button class="promo-code-button">Apply Promo Code</button>
     </div>
