Fixed the Dates Format🤷‍♂️
1. Design, Implement and Link Profile
2. 10
3. Fixed the formatting of the dates.

--- a/Client/Website/src/app/pages/guest/profile/activity-details/activity-details.component.html
+++ b/Client/Website/src/app/pages/guest/profile/activity-details/activity-details.component.html
@@ -13,7 +13,7 @@
         <h4 class="properties-title">Description:</h4>
         <p class="properties-info"> {{activity.description}}</p>
         <h4 class="properties-title">Date:</h4>  
-        <p class="properties-info">{{registration.start_date}}-{{registration.end_date}}</p>
+        <p class="properties-info">{{registration.start_date}} / {{registration.end_date}}</p>
         <h4 class="properties-total">Fee:</h4>
         <div style="display: flex;">
             <h3 class="properties-price">{{formatPrice(activity.price)}}</h3>
