--- a/Client/Website/src/app/pages/guest/profile/booking-details/booking-details.component.html
+++ b/Client/Website/src/app/pages/guest/profile/booking-details/booking-details.component.html
@@ -22,7 +22,7 @@
         <hr style="width: 90%; margin-left: 32px; margin-right: 32px;">
 
         <h4 class="properties-title">Date:</h4>
-        <p class="properties-info">{{check_in}}-{{end_date}}</p>
+        <p class="properties-info">{{check_in}} / {{end_date}}</p>
         <h4 class="properties-title">Occupancy:</h4>
         <p class="properties-info">{{formatOccupancy(room_type.adults_capacity, room_type.adults_with_kids_capacity, room_type.kids_capacity)}}</p>
         
