--- a/Client/Website/src/app/components/news/news-list-item/news-list-item.component.html
+++ b/Client/Website/src/app/components/news/news-list-item/news-list-item.component.html
@@ -3,13 +3,13 @@
     </tr>
     <tr>
         <td class="body_left_col">
-            <p class="body_table_header">{{news?.value?.title}}</p>
-            <p class="body_table_content">{{news?.value?.body}}</p>
+            <p class="body_table_header">{{news.value.title}}</p>
+            <p class="body_table_content">{{news.value.body}}</p>
             <div>
                 <button class="button" (click)="openPopup()">
                     Learn More
                 </button>
-                <p class="likes">{{news?.value?.likes}} Likes</p>
+                <p class="likes">{{news.value.likes}} Likes</p>
             </div>
         </td>
 
