--- a/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.html
+++ b/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.html
@@ -8,7 +8,7 @@
     <tr>
         <td style="padding: 16px; width: 60%; height:80vh;">
 
-            <img style="vertical-align: middle; object-fit: cover;" width="100%" height="100%"
+            <img style="vertical-align: middle; object-fit: cover;" height="500vh"
                 src="../../../assets/activity-1.jpg">
 
         </td>
