--- a/Client/Website/src/app/components/general/carousel/carousel.component.html
+++ b/Client/Website/src/app/components/general/carousel/carousel.component.html
@@ -1,4 +1,4 @@
-<div style="display: flex; justify-content: center;">
+<div style="display: flex; justify-content: center;" [style.visibility]="load ? 'visible' : 'hidden'">
     <table style="width: fit-content;">
         <tr>
             <td>
