Fixed the registration🪂
1. Design, Implement and Link Services Page
2. 10
3. Fixed the registration system

--- a/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.html
+++ b/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.html
@@ -67,9 +67,9 @@
                             </p>
                         </td>
                         <td>
-                            <p class="cancel-btn" (click)="register()">
+                            <button [disabled]="seats == 0 || free < 0" class="cancel-btn" (click)="register()">
                                 Register
-                            </p>
+                            </button>
                         </td>
                     </tr>
                 </table>
