--- a/Client/Website/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/Client/Website/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,47 +1,61 @@
-<!-- <table class="footer">
+<app-nav-bar></app-nav-bar>
+<table class="footer">
 
-  <div class="row">
-    <div class="col-md-3">
-        <button [routerLink]="['/admin/user-database']" class="check-btn">{{"User Database" | translate}}</button>
+    <div class="row">
+        <div class="col-md-3">
+            <button [routerLink]="['/admin/user-database']" class="check-btn">{{"User Database" |
+                translate}}</button>
+        </div>
+        <div class="col-md-3">
+            <button [routerLink]="['/admin/room-database']" class="check-btn">{{"Room Database" |
+                translate}}</button>
+        </div>
+        <div class="col-md-3">
+            <button [routerLink]="['/admin/booking-database']" class="check-btn">{{"Booking
+                Database" | translate}}</button>
+        </div>
+        <div class="col-md-3">
+            <button [routerLink]="['/admin/food-database']" class="check-btn">{{"Food Database" |
+                translate}}</button>
+        </div>
     </div>
-    <div class="col-md-3">
-        <button [routerLink]="['/admin/rooms-database']" class="check-btn">{{"Room Database" | translate}}</button>
+    <div class="row">
+        <div class="col-md-3">
+            <button [routerLink]="['/admin/announcement-database']"
+                class="check-btn">{{"Announcement Database" | translate}}</button>
+        </div>
+        <div class="col-md-3">
+            <button [routerLink]="['/admin/language-database']" class="check-btn">{{"Language
+                Database" | translate}}</button>
+        </div>
+        <div class="col-md-3">
+            <button [routerLink]="['/admin/news-database']" class="check-btn">{{"News Database" |
+                translate}}</button>
+        </div>
+        <div class="col-md-3">
+            <button [routerLink]="['/admin/order-database']" class="check-btn">{{"Order Database" |
+                translate}}</button>
+        </div>
     </div>
-    <div class="col-md-3">
-        <button [routerLink]="['/admin/booking-database']" class="check-btn">{{"Booking Database" | translate}}</button>
+    <div class="row">
+        <div class="col-md-3">
+            <button [routerLink]="['/admin/promo-database']" class="check-btn">{{"Promo-Code
+                Database" | translate}}</button>
+        </div>
+        <div class="col-md-3">
+            <button [routerLink]="['/admin/registration-database']"
+                class="check-btn">{{"Registration Database" | translate}}</button>
+        </div>
+        <div class="col-md-3">
+            <button [routerLink]="['/admin/service-database']" class="check-btn">{{"Services
+                Database" | translate}}</button>
+        </div>
+        <div class="col-md-3">
+            <button [routerLink]="['/admin/stock-database']" class="check-btn">{{"Stock Database" |
+                translate}}</button>
+        </div>
     </div>
-    <div class="col-md-3">
-        <button [routerLink]="['/admin/food-database']" class="check-btn">{{"Food Database" | translate}}</button>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-3">
-        <button [routerLink]="['/admin/announcement-database']" class="check-btn">{{"Announcement Database" | translate}}</button>
-    </div>
-    <div class="col-md-3">
-        <button [routerLink]="['/admin/language-database']" class="check-btn">{{"Language Database" | translate}}</button>
-    </div>
-    <div class="col-md-3">
-        <button [routerLink]="['/admin/news-database']" class="check-btn">{{"News Database" | translate}}</button>
-    </div>
-    <div class="col-md-3">
-        <button [routerLink]="['/admin/order-database']" class="check-btn">{{"Order Database" | translate}}</button>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-3">
-        <button [routerLink]="['/admin/promo-database']" class="check-btn">{{"Promo-Code Database" | translate}}</button>
-    </div>
-    <div class="col-md-3">
-        <button [routerLink]="['/admin/registration-database']" class="check-btn">{{"Registration Database" | translate}}</button>
-    </div>
-    <div class="col-md-3">
-        <button [routerLink]="['/admin/services-database']" class="check-btn">{{"Services Database" | translate}}</button>
-    </div>
-    <div class="col-md-3">
-        <button [routerLink]="['/admin/stock-database']" class="check-btn">{{"Stock Database" | translate}}</button>
-    </div>
-</div>
 
-      
-</table> -->
+
+</table>
+<app-footer main_color="#14274A" font_color="white"></app-footer>
