--- a/Client/Website/src/app/pages/guest/profile/profile.component.html
+++ b/Client/Website/src/app/pages/guest/profile/profile.component.html
@@ -4,6 +4,7 @@
         <app-nav-bar [hide_auth]="true" style="position: relative;"></app-nav-bar>
         <button class="edit-button">Edit Profile</button>
         <button class="change-pass-button">Change Password</button>
+        <button (click)="logout()" class="logout-button">Logout</button>
     </div>
 
 
@@ -13,7 +14,7 @@
         <button class="promo-code-button">Apply Promo Code</button>
     </div>
 
-    <div class="profile-container">
+    <div *ngIf="orders.size" class="profile-container">
         <h1 class="page-titles">My Orders</h1>
         <hr class="divider">
         <div class="orders-container">
@@ -26,17 +27,17 @@
         </div>
     </div>
 
-    <div style="width: 98%;">
+    <div *ngIf="bookings.size" style="width: 98%;">
         <h1 class="page-titles">My Bookings</h1>
         <hr class="divider">
-        <app-carousel [browsePopup]="browseBookingHistory" #carousel>
+        <app-carousel #carousel>
             <ng-container *ngFor="let booking of bookings | keyvalue: keyDescOrder; let i = index">
                 <ng-container *carouselItem>
 
                     <app-booking-details
                         style="width: 100%; display: flex; position: relative;left: 50%; transform: translateX(-50%); "
-                        [@fadeOut] [room]="rooms.get(booking.value.room_id)!"
-                        [room_type]="room_types.get(rooms.get(booking.value.room_id)!.type)!"
+                        [@fadeOut] [room]="rooms.get(booking.value.room_id)"
+                        [room_type]="room_types.get(rooms.get(booking.value.room_id)?.type || '0')"
                         [check_in]="booking.value.check_in" [end_date]="booking.value.end_date"
                         [exhausted]="booking.value.exhausted"></app-booking-details>
                 </ng-container>
@@ -45,23 +46,17 @@
 
 
     </div>
-    <div>
+    <div *ngIf="registrations.size">
         <h1 class="page-titles">My Activities</h1>
         <hr class="divider">
-        <app-carousel [browsePopup]="browseBookingHistory" #carousel>
-            <ng-container *ngFor="let registration of registrations | keyvalue; let i = index">
+        <app-carousel #carousel>
+            <ng-container *ngFor="let registration of registrations | keyvalue: activity_key; let i = index">
                 <ng-container *carouselItem>
 
                     <app-activity-details
                         style="width: 100%; display: flex; position: relative;left: 50%; transform: translateX(-50%); "
-                        [@fadeOut] [activity]="activities.get(registration.value.activity_id)!" 
-                        [registration]="registrations.get(registration.key)!" 
-                        [title]="activities.get(registration.value.activity_id)?.title!"
-                        [description]="activities.get(registration.value.activity_id)?.description!" 
-                        [capacity]="activities.get(registration.value.activity_id)?.capacity!" 
-                        [start_date]="registrations.get(registration.value.activity_id)?.start_date!" 
-                        [end_date]="registrations.get(registration.value.activity_id)?.end_date!" 
-                        [price]="activities.get(registration.value.activity_id)?.price!"  
+                        [@fadeOut] [activity]="activities.get(registration.value.activity_id)" 
+                        [registration]="registrations.get(registration.key)"   
                         ></app-activity-details>
                 </ng-container>
             </ng-container>
